<?xml version="1.0"?>
<package format="3">
  <name>g1_navigation</name>
  <version>0.1.0</version>
  <description>G1 Inspector navigation and Nav2 integration</description>
  <maintainer email="g1-inspector@unitree-project.dev">G1 Inspector Team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>g1_interfaces</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
