<?xml version="1.0"?>
<package format="3">
  <name>g1_safety</name>
  <version>0.1.0</version>
  <description>G1 Inspector E-stop and battery monitoring</description>
  <maintainer email="g1-inspector@unitree-project.dev">G1 Inspector Team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>g1_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
